<resources>
    <string name="app_name">AndroidAppChallenge</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_signin">Sign In</string>
    <string name="text_firstname">First name</string>
    <string name="text_lastname">Last name</string>
    <string name="text_mobilenumber">Mobile number</string>
    <string name="text_selectgender">Select gender</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_edit_mobile_number">Edit Mobile Number</string>
    <string name="text_open_images">Open Images</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_change_mobile">Change Mobile Number</string>
    <string name="text_change_mobile_fail">Failed to change Mobile Number</string>
    <string name="text_change_mobile_success">Success change Mobile Number</string>
    <string name="text_field_empty">All fields are required</string>
    <string name="text_data_empty">Please complete the form</string>
    <string name="text_gender_empty">Please select gender</string>
    <string name="text_invalid_email">Email is not valid</string>
    <string name="text_invalid_password">Password should contain one special character and a minimum 8 characters required</string>
    <string name="text_invalid_mobile">Invalid mobile number</string>
    <string name="text_fail_signin">Not sign in</string>
    <string name="text_change">Change</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="text_signin_success">Sign Up Success!</string>
    <string name="text_email_exist">Email already exists</string>
    <string-array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
