<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.TextInputLayout
    android:id="@+id/textInputLayoutEmail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/text_email" />
</android.support.design.widget.TextInputLayout>